# p1-mqtt

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
p1_mqtt/: cli.py  mqtt.py  p1io.py  p1serial.py
p1_mqtt/p1/: objects.py  p1object.py  parser.py  telegram.py
p1_mqtt/p1/objects/: __init__.py  objects.py  p1object.py  util.py
tests/: test_p1_mqtt.py  test_p1_parser.py  test_p1_telegram_split.py  x_test_render.py
