[tool.poetry]
name = "p1-mqtt"
version = "0.1.0"
description = "A gateway from smart meters using the P1 protocol to MQTT"
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"
pytz = "^2020.5"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[tool.poetry.scripts]
p1-mqtt = "p1_mqtt.cli:p1_mqtt"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
