[tool.poetry]
name = "p1-mqtt"
version = "0.1.3"
description = "A gateway from smart meters using the P1 protocol to MQTT"
authors = ["Ralf Ertzinger <ralf@skytale.net>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
pytz = "^2020.5"
paho-mqtt = "^1.5.1"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
mypy = "^0.790"
black = "^22.3.0"
isort = "^5.7.0"
flake8 = "^3.8.4"

[tool.poetry.scripts]
p1-mqtt = "p1_mqtt.cli:p1_mqtt"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
